# code-snippets

./: README.md  pyproject.toml
code/django_tests/: tests.py
code/google_calendar/: google_calendar.py
code/google_merchant/: google_merchant.py
code/selenium_automation/: __init__.py  website1.py  website2.py
code/stripe/: stripe.py
